# dezly-labs

./: README.md
bash-lab/: 01_the_shebang.bash  README.md
c-lab/01-setup-guide/: 01_setting_up_c_on_arch_linux.md  02_c_project_setup_guide.md
c-lab/02-core-syntax/: .clangd  README.md  mise.toml
c-lab/03-code-modularity/: Makefile
c-lab/04-data-structures-and-algorithms/: .clang-format  mise.toml
c-lab/s01-setup-guide/: 02_c_project_setup_guide.md
c-lab/s02-core-syntax/: .clang-format  .clangd
cpp-lab/01-setup-guide/: 01_setting_up_cpp_on_arch_linux.md
cpp-lab/02-core-syntax/: .clang-format
cpp-lab/03-multi-file-programs/02-cmake/mfp-01/: CMakeLists.txt
cpp-lab/04-data-structures-and-algorithms/: .clang-format  README.md
cpp-lab/section-01-setup-guide/: 01_setting_up_cpp_on_arch_linux.md  02_cpp_project_setup_guide.md
cpp-lab/section-04-data-structures-and-algorithms/: .clangd  mise.toml
docker-lab/: 01_setting_up_docker_on_arch_linux.md  02_setting_up_a_postgres_container.md  02_setting_up_a_postgres_workflow.md  README.md  mise.toml
docker-lab/.mise-tasks/: containers.bash  images.bash  ports.bash  status.bash  volumes.bash
docker-lab/02-using-docker-compose/: 01_setting_up_a_postgres_workflow.md
docker-lab/03-using-the-docker-cli/: 03_managing_container_volumes.md  03_managing_volumes.md
docker-lab/postgres-container/: compose.yaml
kubernetes-lab/: 01_what_is_kubernetes.md  mise.toml
postgres-lab/: .gitignore  .pgcli_config.ini  README.md  compose.yaml  mise.toml  pyproject.toml
tailwindcss-lab/: package.json
(+238 files in other folders)
